--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -92,7 +92,11 @@ Paris 75008 - 2j de TT/sem.
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Ten Years of TypeScript](https://devblogs.microsoft.com/typescript/ten-years-of-typescript)
+- [Fastest Frontend Tooling in 2022](https://cpojer.net/posts/fastest-frontend-tooling-in-2022)
+- [Gifs without the .gif - The most performant image and video options](https://css-tricks.com/gifs-without-the-gif-the-most-performant-image-and-video-options-right-now/)
+- [Use cases for CSS comparison functions](https://ishadeed.com/article/use-cases-css-comparison-functions/)
+- [Node.js 18 - `node --watch`](https://github.com/nodejs/node/pull/44366)
 
 ---
 
