--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
@@ -45,7 +45,58 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Next.js 13.2](https://nextjs.org/blog/next-13-2)
+
+https://twitter.com/delba_oliveira/status/1628841728307232768
+
+https://twitter.com/shadcn/status/1629533541183651842
+
+https://twitter.com/timneutkens/status/1628836655762141187
+
+---
+
+[Vercel Cache API: A progressive cache, integrated with Next.js](https://vercel.com/blog/vercel-cache-api-nextjs-cache)
+
+https://twitter.com/sebmarkbage/status/1628845420121128965
+
+https://twitter.com/delba_oliveira/status/1628841728307232768
+
+https://twitter.com/cramforce/status/1628849610696568832
+
+---
+
+[Module Extraction: The Silent Web Revolution](https://www.builder.io/blog/module-extraction-the-silent-web-revolution)
+
+https://twitter.com/RyanCarniato/status/1628879925217497089
+
+---
+
+[Why useEffect May Not Be the Best Abstraction](https://www.builder.io/blog/useeffect-not-the-best-abstraction)
+
+https://twitter.com/mhevery/status/1628537269417295873
+
+---
+
+Signals:
+
+- https://twitter.com/mhevery/status/1628556944318550016
+
+---
+
+- [Storybook 7 Docs](https://storybook.js.org/blog/storybook-7-docs/) + https://twitter.com/storybookjs/status/1628788317012590594
+- [nodl - framework for visual node graphs](https://twitter.com/emilwidlund/status/1628877076424949760)
+- [markdown-rs + mdxjs-rs](https://twitter.com/wooorm/status/1629138812231090179)
+- [React Aria - February 2023 releases](https://twitter.com/devongovett/status/1629156091178131457)
+- [Radix UI releases](https://twitter.com/radix_ui/status/1629120708054753281)
+- [TanStack Bling](https://github.com/TanStack/bling/) https://twitter.com/tannerlinsley/status/1629254943441051648
+- [Matt Carroll](https://twitter.com/mattcarrollcode) + [Sean Keegan](https://twitter.com/DevRelSean): 2 DevRels viennent de rejoindre l'équipe React.
+- [Jordan Walke - "Of course this is one of the first things people suggested when we built react. “Let’s just track the access of data on reads”."](https://twitter.com/jordwalke/status/1629663133039214593)
+- [Andrew Clark on Signals](https://twitter.com/acdlite/status/1628811935088013314)
+- [Devon Govett - "the debate about signals is the same one we had about 2-way data binding vs unidirectional data flow 10 years ago"](https://twitter.com/devongovett/status/1629540226589663233)
+- Dan Abramov: ["react props and state are raw values"](https://twitter.com/dan_abramov/status/1629539600489119744) + ["the user expects to see the same thing on the screen given the same data"](https://twitter.com/dan_abramov/status/1629872956288512007)
+- [TanStack Query v5.0.0-alpha.0](https://twitter.com/TkDodo/status/1630159547405877249)
+- [Signals For Solid, Qwik And React](https://www.youtube.com/watch?v=ZLMjJL70glE)
+- [Chat about the future for stitches](https://github.com/stitchesjs/stitches/issues/1144)
 
 <SubscribeFormEmbed />
 
@@ -70,6 +121,29 @@ Use [Checkly](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&
 ---
 
 ## 📱 React-Native {#react-native}
+
+[Expo 48](https://blog.expo.dev/expo-sdk-48-ccb8302e231)
+
+https://twitter.com/Baconbrix/status/1629216259186327553
+
+https://twitter.com/expo/status/1629213084098379776
+
+---
+
+[Announcing Expo Router v1](https://blog.expo.dev/announcing-expo-router-v1-1d97d7833605)
+
+https://twitter.com/Baconbrix/status/1628502539455938564
+
+https://github.com/expo/router/discussions/309
+
+---
+
+- [Expo Image 1.0](https://twitter.com/tsapeta/status/1628381264976683010)
+- [Metro 0.75.1](https://twitter.com/robjhogan/status/1628460899714449416): support expérimental des symlinks et package "exports"!
+- [Dank Style](https://dank.style/): https://twitter.com/sanketsahu/status/1629228026079879168
+- [Expo + React-Native Server Components demo](https://twitter.com/Baconbrix/status/1629909713910480898)
+- [How to build an Expo Library using Native Modules](https://www.youtube.com/watch?v=ZNE7Of3TZAY)
+- [Fastlane - Update immediately to avoid locked Apple ID account](https://twitter.com/FastlaneTools/status/1629153901747265538)
 
 <Todo />
 
@@ -111,13 +185,31 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Deno 1.31](https://twitter.com/deno_land/status/1629123230492463106)
+- [Bun docs available](https://twitter.com/colinhacks/status/1629310598004772865)
+- [SpiderMonkey - JavaScript Import maps - Introduction](https://spidermonkey.dev/blog/2023/02/23/javascript-import-maps-part-1-introduction.html)
+- [Ezno Open-Sourced](https://twitter.com/kaleidawave/status/1629885949353009156)
+- [Vitest 0.29](https://twitter.com/sheremet_va/status/1629403679898972161)
+- [Getting Started with Style Queries](https://developer.chrome.com/blog/style-queries/)
+- [Mock Service Worker 1.1](https://twitter.com/ApiMocking/status/1628909915111579650)
+- [Angular v16.0.0-next.0](https://twitter.com/Enea_Jahollari/status/1628515124347654144): signals
+- [Chrome’s Headless mode just got a whole lot better!](https://developer.chrome.com/articles/new-headless/)
+- [Turborepo 1.8](https://twitter.com/turborepo/status/1628497786881597444)
+- [Safari Technology Preview 164](https://webkit.org/blog/13902/release-notes-for-safari-technology-preview-164/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/trashh_dev/status/1629883957121781760
+
+https://twitter.com/Steve8708/status/1629124957988085761
+
+https://twitter.com/trashh_dev/status/1628410081556701184
+
+https://twitter.com/brandontroberts/status/1628754855857737728
+
+https://twitter.com/levelsio/status/1628079930520272899
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
 
