--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
@@ -79,24 +79,41 @@ https://twitter.com/mhevery/status/1628537269417295873
 
 Signals:
 
+[The Evolution of Signals in JavaScript](https://dev.to/this-is-learning/the-evolution-of-signals-in-javascript-8ob)
+
+- https://twitter.com/acdlite/status/1628811935088013314
 - https://twitter.com/mhevery/status/1628556944318550016
-
----
-
-- [Storybook 7 Docs](https://storybook.js.org/blog/storybook-7-docs/) + https://twitter.com/storybookjs/status/1628788317012590594
-- [nodl - framework for visual node graphs](https://twitter.com/emilwidlund/status/1628877076424949760)
-- [markdown-rs + mdxjs-rs](https://twitter.com/wooorm/status/1629138812231090179)
-- [React Aria - February 2023 releases](https://twitter.com/devongovett/status/1629156091178131457)
-- [Radix UI releases](https://twitter.com/radix_ui/status/1629120708054753281)
-- [TanStack Bling](https://github.com/TanStack/bling/) https://twitter.com/tannerlinsley/status/1629254943441051648
-- [Matt Carroll](https://twitter.com/mattcarrollcode) + [Sean Keegan](https://twitter.com/DevRelSean): 2 DevRels viennent de rejoindre l'équipe React.
+- https://twitter.com/acdlite/status/1628930249718202369
+- https://twitter.com/devongovett/status/1629540226589663233
 - [Jordan Walke - "Of course this is one of the first things people suggested when we built react. “Let’s just track the access of data on reads”."](https://twitter.com/jordwalke/status/1629663133039214593)
 - [Andrew Clark on Signals](https://twitter.com/acdlite/status/1628811935088013314)
 - [Devon Govett - "the debate about signals is the same one we had about 2-way data binding vs unidirectional data flow 10 years ago"](https://twitter.com/devongovett/status/1629540226589663233)
 - Dan Abramov: ["react props and state are raw values"](https://twitter.com/dan_abramov/status/1629539600489119744) + ["the user expects to see the same thing on the screen given the same data"](https://twitter.com/dan_abramov/status/1629872956288512007)
-- [TanStack Query v5.0.0-alpha.0](https://twitter.com/TkDodo/status/1630159547405877249)
-- [Signals For Solid, Qwik And React](https://www.youtube.com/watch?v=ZLMjJL70glE)
-- [Chat about the future for stitches](https://github.com/stitchesjs/stitches/issues/1144)
+
+---
+
+- 👥 [Matt Carroll](https://twitter.com/mattcarrollcode) + [Sean Keegan](https://twitter.com/DevRelSean): 2 DevRels viennent de rejoindre l'équipe React.
+- 📜 [React Is Holding Me Hostage](https://emnudge.dev/blog/react-hostage)
+- 📜 [useSyncExternalStore - A First Look](https://julesblom.com/writing/usesyncexternalstore)
+- 📜 [i18n translations in Next.js 13's app-dir for server/client components](https://aralroca.com/blog/i18n-translations-nextjs-13-app-dir)
+- 📜 [What to Expect from Vue in 2023 and How it Differs from React](https://thenewstack.io/vue-2023/)
+- 📜 [How to avoid tricky async state manager pitfalls in React](https://evilmartians.com/chronicles/how-to-avoid-tricky-async-state-manager-pitfalls-react)
+- 📜 [Owncast v0.1.0 Retrospective - Frontend Web Rewrite](https://gabekangas.com/blog/2023/02/owncast-v0.1.0-retrospective-frontend-web-rewrite/)
+- 📜 [React Libraries for 2023](https://www.robinwieruch.de/react-libraries/)
+- 📜 [Storybook 7 Docs](https://storybook.js.org/blog/storybook-7-docs/) + https://twitter.com/storybookjs/status/1628788317012590594
+- 📦 [Forgetti](https://github.com/lxsmnsyc/forgetti)
+- 📦 [Tinasaurus: Edit your Docusaurus site with TinaCMS](https://tina.io/blog/tinasaurus-docusaurus-starter/)
+- 📦 [Suspense - Utilities for working with React Suspense](https://github.com/bvaughn/suspense/)
+- 📦 [Sonner - an opinionated toast component for React](https://twitter.com/emilkowalski_/status/1628742238548250624)
+- 📦 [nodl - framework for visual node graphs](https://twitter.com/emilwidlund/status/1628877076424949760)
+- 📦 [markdown-rs + mdxjs-rs](https://twitter.com/wooorm/status/1629138812231090179)
+- 📦 [React Aria - February 2023 releases](https://twitter.com/devongovett/status/1629156091178131457)
+- 📦 [Radix UI releases](https://twitter.com/radix_ui/status/1629120708054753281)
+- 📦 [TanStack Bling](https://github.com/TanStack/bling/) https://twitter.com/tannerlinsley/status/1629254943441051648
+- 📦 [TanStack Query v5.0.0-alpha.0](https://twitter.com/TkDodo/status/1630159547405877249)
+- 💬 [Chat about the future for stitches](https://github.com/stitchesjs/stitches/issues/1144)
+- 🎙️ [Reactiflux Podcast - Behind the React Documentary with Ida Bechtle and Christopher Chedeau](https://anchor.fm/reactiflux)
+- 🎥 [Signals For Solid, Qwik And React](https://www.youtube.com/watch?v=ZLMjJL70glE)
 
 <SubscribeFormEmbed />
 
@@ -138,12 +155,20 @@ https://github.com/expo/router/discussions/309
 
 ---
 
-- [Expo Image 1.0](https://twitter.com/tsapeta/status/1628381264976683010)
-- [Metro 0.75.1](https://twitter.com/robjhogan/status/1628460899714449416): support expérimental des symlinks et package "exports"!
-- [Dank Style](https://dank.style/): https://twitter.com/sanketsahu/status/1629228026079879168
-- [Expo + React-Native Server Components demo](https://twitter.com/Baconbrix/status/1629909713910480898)
-- [How to build an Expo Library using Native Modules](https://www.youtube.com/watch?v=ZNE7Of3TZAY)
-- [Fastlane - Update immediately to avoid locked Apple ID account](https://twitter.com/FastlaneTools/status/1629153901747265538)
+- 📜 [React Native App Clip: New Capabilities and Reduced App Size](https://bndkt.com/blog/2023/react-native-app-clip-new-capabilities) + https://twitter.com/bndkt/status/1630330441181065216
+- 💬 [RFC: introduce reactNativeMetadata to package.json](https://github.com/react-native-community/discussions-and-proposals/pull/588)
+- 💬 [RFC: Lazy bundling](https://github.com/react-native-community/discussions-and-proposals/pull/605)
+- 📦 [Reanimated 3.0](https://blog.swmansion.com/releasing-reanimated-3-0-17fab4cb2394) + https://twitter.com/swmansion/status/1630590156255240193
+- 📦 [Expo Image 1.0](https://twitter.com/tsapeta/status/1628381264976683010)
+- 📦 [Metro 0.75.1](https://twitter.com/robjhogan/status/1628460899714449416): support expérimental des symlinks et package "exports"!
+- 📦 [Restyle - Performance improvements](https://github.com/Shopify/restyle/pull/220)
+- 📦 [Dank Style](https://dank.style/): https://twitter.com/sanketsahu/status/1629228026079879168
+- 👀 [Expo + React-Native Server Components demo](https://twitter.com/Baconbrix/status/1629909713910480898)
+- 👀 [BottomSheet - web support coming in v5](https://twitter.com/gorhom/status/1627399052068282368)
+- ⚠️ [Fastlane - Update immediately to avoid locked Apple ID account](https://twitter.com/FastlaneTools/status/1629153901747265538)
+- 🎙️ [The React Native Show, Coffee Talk #8 - State of React Native](https://www.youtube.com/watch?v=jwfsMzLY5Cs)
+- 🎥 [A Beginner's Guide to 3D Animations in React Native with three.js](https://www.youtube.com/watch?v=5WNoynmnEAs)
+- 🎥 [How to build an Expo Library using Native Modules](https://www.youtube.com/watch?v=ZNE7Of3TZAY)
 
 <Todo />
 
@@ -175,7 +200,8 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- 🎥 [NextJS Version 13.2 - Test des nouveautés](https://www.youtube.com/watch?v=Qi45LrnbjOE)
+- 🎥 [Next JS Project : Installation et Premier Pas](https://www.youtube.com/watch?v=-SrqXDcjxKs)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -185,6 +211,8 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
+- [Babel 7.21](https://babeljs.io/blog/2023/02/20/7.21.0): support TypeScript 5.0 et decorators
+- [Angular v16.0.0-next.0](https://twitter.com/Enea_Jahollari/status/1628515124347654144): signals
 - [Deno 1.31](https://twitter.com/deno_land/status/1629123230492463106)
 - [Bun docs available](https://twitter.com/colinhacks/status/1629310598004772865)
 - [SpiderMonkey - JavaScript Import maps - Introduction](https://spidermonkey.dev/blog/2023/02/23/javascript-import-maps-part-1-introduction.html)
@@ -192,10 +220,10 @@ Pas de contenu cette semaine 😅
 - [Vitest 0.29](https://twitter.com/sheremet_va/status/1629403679898972161)
 - [Getting Started with Style Queries](https://developer.chrome.com/blog/style-queries/)
 - [Mock Service Worker 1.1](https://twitter.com/ApiMocking/status/1628909915111579650)
-- [Angular v16.0.0-next.0](https://twitter.com/Enea_Jahollari/status/1628515124347654144): signals
 - [Chrome’s Headless mode just got a whole lot better!](https://developer.chrome.com/articles/new-headless/)
 - [Turborepo 1.8](https://twitter.com/turborepo/status/1628497786881597444)
 - [Safari Technology Preview 164](https://webkit.org/blog/13902/release-notes-for-safari-technology-preview-164/)
+- [Let's build a Chrome extension that steals everything](https://mattfrisbie.substack.com/p/spy-chrome-extension)
 
 ---
 
